Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,4 @@
 [access "refs/heads/*"]
 	create = group Administrators
+	forgeAuthor = group Administrators
+	forgeCommitter = group Administrators
