--- a/project.config
+++ b/project.config
@@ -2,3 +2,4 @@
 	create = group Administrators
 	forgeAuthor = group Administrators
 	forgeCommitter = group Administrators
+	label-Code-Review = -2..+2 group Core Team
