Modified project settings

--- a/project.config
+++ b/project.config
@@ -3,3 +3,5 @@
 	forgeAuthor = group Administrators
 	forgeCommitter = group Administrators
 	label-Code-Review = -2..+2 group Core Team
+[receive]
+	requireChangeId = true
